[gd_scene load_steps=6 format=2]

[ext_resource path="res://app/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://app/gui/GameplayUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/main_ambient.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/images/bg.png" type="Texture" id=4]
[ext_resource path="res://app/GameplayController.gd" type="Script" id=5]

[node name="GameplayController" type="Node" groups=[
"persist",
]]
script = ExtResource( 5 )
player_blueprint = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1473.0
margin_top = -1202.0
margin_right = 4055.0
margin_bottom = 3812.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 4 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmbientAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="GuiLayer" type="CanvasLayer" parent="."]

[node name="GameplayUI" parent="GuiLayer" instance=ExtResource( 2 )]

[node name="LevelContainer" type="Node" parent="."]

[node name="RestartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TeleportTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]
[connection signal="timeout" from="TeleportTimer" to="." method="loadNextLevel"]
